H3CIPMSJAVA-20180830/src/objects/NPS__c.object
<CustomObject>
    <fields>
        <fullName>Customer_Name_CN__c</fullName>
        <label>Customer Name(Chinese)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Name_EN__c</fullName>
        <label>Customer Name(English)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key_Word1__c</fullName>
        <label>Key Word1</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key_Word2__c</fullName>
        <label>Key Word2</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key_Word3__c</fullName>
        <label>Key Word3</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>NPS</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Customer_Name_CN__c</columns>
        <columns>Key_Word1__c</columns>
        <columns>Key_Word2__c</columns>
        <columns>Key_Word3__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>N-{000000}</displayFormat>
        <label>NPSID</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>